Fixed select * and added analyzer rules for projecting row_id in query (#20152)
* Fixed select * and added analyzer rules for projecting row_id in query phase

# Conflicts:
#	plugins/engine-datafusion/src/test/java/org/opensearch/datafusion/DataFusionServiceTests.java

# Conflicts:
#	plugins/engine-datafusion/jni/src/query_executor.rs

* deriving is_aggregation_query from plan and fetch metadata field from mappers.

---------

Co-authored-by: Aniket Modak <animodak@amazon.com>